@@ -10,6 +10,7 @@ trunk
 
 * Provide better support for running in virtual enviroments
   the differ from the build environment.
+* Disable HDF5 file locking by default. 
 
 Feb. 5, 2020 Alex Olivas (aolivas@umd.edu)
 -------------------------------------------
